--- a/templates/obras/categoria_form.html
+++ b/templates/obras/categoria_form.html
@@ -18,5 +18,6 @@
     {% csrf_token %}
     {{ form|crispy }}
     <button type="submit" class="btn btn-primary mt-3">Salvar Categoria</button>
+    <a href="{% url 'obras:detalhe_obra' obra.id %}" class="btn btn-secondary mt-3">Cancelar</a>
   </form>
 {% endblock %}
