--- a/templates/obras/obra_form.html
+++ b/templates/obras/obra_form.html
@@ -16,7 +16,7 @@
 
   <div class="card">
     <div class="card-body">
-      <form method="post">
+      <form method="post" enctype="multipart/form-data">
         {% csrf_token %}
         <h5 class="mb-3">Dados da Obra</h5>
         {{ form|crispy }}
