--- a/templates/obras/tarefa_form.html
+++ b/templates/obras/tarefa_form.html
@@ -1,22 +1,33 @@
 {% extends "base.html" %}
 {% load crispy_forms_tags %}
 
-{% block title %}Nova Tarefa{% endblock %}
+{% block title %}
+  {% if object %}Editar Tarefa{% else %}Nova Tarefa{% endif %}
+{% endblock %}
 
 {% block content %}
-  <nav aria-label="breadcrumb">
-    <ol class="breadcrumb">
-      <li class="breadcrumb-item"><a href="{% url 'obras:listar_obras' %}">Obras</a></li>
-      <li class="breadcrumb-item"><a href="{% url 'obras:detalhe_obra' obra.id %}">{{ obra.nome }}</a></li>
-      <li class="breadcrumb-item active" aria-current="page">Nova Tarefa em {{ categoria.nome }}</li>
-    </ol>
-  </nav>
+  {% with current_obra=current_obra current_categoria=current_categoria %}
+    <nav aria-label="breadcrumb">
+      <ol class="breadcrumb">
+        <li class="breadcrumb-item"><a href="{% url 'obras:listar_obras' %}">Obras</a></li>
+        <li class="breadcrumb-item">
+          <a href="{% url 'obras:detalhe_obra' current_obra.id %}">{{ current_obra.nome }}</a>
+        </li>
+        <li class="breadcrumb-item active" aria-current="page">
+          {% if object %}Editar Tarefa{% else %}Nova Tarefa em {{ current_categoria.nome }}{% endif %}
+        </li>
+      </ol>
+    </nav>
 
-  <h1 class="mb-4">Adicionar Tarefa em "{{ categoria.nome }}"</h1>
+    <h1 class="mb-4">
+      {% if object %}Editar Tarefa{% else %}Adicionar Tarefa em "{{ current_categoria.nome }}"{% endif %}
+    </h1>
 
-  <form method="post">
-    {% csrf_token %}
-    {{ form|crispy }}
-    <button type="submit" class="btn btn-primary mt-3">Salvar Tarefa</button>
-  </form>
+    <form method="post">
+      {% csrf_token %}
+      {{ form|crispy }}
+      <button type="submit" class="btn btn-primary mt-3">Salvar Tarefa</button>
+      <a class="btn btn-secondary mt-3" href="{% url 'obras:detalhe_obra' current_obra.id %}">Cancelar</a>
+    </form>
+  {% endwith %}
 {% endblock %}
