--- a/templates/inspecoes/inspecao_form.html
+++ b/templates/inspecoes/inspecao_form.html
@@ -1,5 +1,6 @@
 {% extends "base.html" %}
 {% load static %}
+{% load crispy_forms_tags %}
 {% block title %}Nova inspeção{% endblock %}
 
 {% block content %}
@@ -14,10 +15,10 @@
 <div class="card">
   <div class="card-body">
     <h1 class="h4 mb-3">Nova inspeção - {{ obra }}</h1>
-    <form method="post" enctype="multipart/form-data">
+    <form method="post" enctype="multipart/form-data" class="row g-3">
       {% csrf_token %}
 
-      {{ form.as_p }}
+      {{ form|crispy }}
 
       <div class="mb-3">
         <label class="form-label">Fotos da inspeção (opcional)</label>
@@ -29,9 +30,9 @@
       <input type="hidden" name="longitude" id="id_longitude">
 
       <div class="d-flex gap-2 mt-3">
-  <button type="button" class="btn btn-outline-secondary" id="btn-capturar-localizacao">
+        <button type="button" class="btn btn-outline-secondary" id="btn-capturar-localizacao">
           Capturar localização
-  </button>
+        </button>
         <button type="submit" class="btn btn-primary">Salvar inspeção</button>
         <a class="btn btn-link text-decoration-none" href="{% url 'obras:detalhe_obra' obra.id %}">Cancelar</a>
       </div>
