--- a/templates/obras/obra_list.html
+++ b/templates/obras/obra_list.html
@@ -17,7 +17,7 @@
 
 <ul class="nav nav-tabs mb-3">
   <li class="nav-item">
-    <a class="nav-link {% if status_filter == 'ativa' or status_filter == '' %}active{% endif %}" href="?status=ativa">Obras ativas ({{ counts.ativa|default:0 }})</a>
+    <a class="nav-link {% if status_filter == 'ativa' %}active{% endif %}" href="?status=ativa">Obras ativas ({{ counts.ativa|default:0 }})</a>
   </li>
   <li class="nav-item">
     <a class="nav-link {% if status_filter == 'finalizada' %}active{% endif %}" href="?status=finalizada">Finalizadas ({{ counts.finalizada|default:0 }})</a>
